# V2X

./: .gitignore  HOW_IT_ALL_WORKS.md  ISSUES.MD  README.md  SETUP_PYTHON.md  SETUP_ROS2.md  TRACK_DESIGN.md  V2X Robot Demonstration Platform Architecture Manual V2.docx  WORKING_WITH_V2X.md  pyrightconfig.json
.claude/: settings.local.json
ROS_Code/scripts/: lyra_commands.sh  lyra_doctor.sh
ROS_Code/src/lyra_bridge/: README.md  TESTING.md  package.xml  setup.cfg  setup.py
ROS_Code/src/lyra_bridge/config/: lyra_params.yaml
ROS_Code/src/lyra_bridge/launch/: bridge.launch.py
ROS_Code/src/lyra_bridge/lyra_bridge/: __init__.py  node.py.bak  telemetry.py  transport.py
ROS_Code/src/lyra_cmd_vel_gate/: package.xml  setup.cfg  setup.py
ROS_Code/src/lyra_cmd_vel_gate/lyra_cmd_vel_gate/: node.py
ROS_Code/src/lyra_config/: CMakeLists.txt  package.xml
ROS_Code/src/lyra_config/config/: control.yaml  localization.yaml  robot.yaml  sensors.yaml
ROS_Code/src/lyra_localization/: package.xml  setup.cfg  setup.py
ROS_Code/src/lyra_localization/lyra_localization/: odom_node.py  wheel_odom_node.py
ROS_Code/src/lyra_localization/lyra_localization/config/: ekf.yaml  ekf_adaptive.yaml  ekf_adaptive.yaml.bak  imu_filter.yaml
ROS_Code/src/v2x_robot/: package.xml  setup.py
ROS_Code/src/v2x_robot/config/: line_follower.yaml  position.yaml
ROS_Code/src/v2x_robot/launch/: ambulance.launch.py  car.launch.py
ROS_Code/src/v2x_robot/v2x_robot/: emergency_handler_node.py  line_follower_node.py  position_broadcaster_node.py  position_node.py  v2x_bridge_node.py
STM32F405RGTx/: .cproject  .mxproject  STM32F405RGTX_FLASH.ld  STM32F405RGTx Debug.launch  STM32F405RGTx.ioc
STM32F405RGTx/Core/: CONSOLIDATED_HEADER.txt  CONSOLIDATED_SOURCE.txt  ConsolidateHeader.ps1  ConsolidateSrc.ps1  llm_code_creator.txt
STM32F405RGTx/Core/Inc/: main.h  ros_interface.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
STM32F405RGTx/Core/Inc/app/: app_main.h  app_rtos.h  app_transport.h  config_storage.h  debug_log.h  lyra_cmd.h  lyra_proto.h  oled_display.h
STM32F405RGTx/Core/Inc/config/: robot_config.h
STM32F405RGTx/Core/Inc/drivers/: adc_utils.h  encoder_driver.h  fonts.h  imu_lsm6dsrtr.h  motor_driver.h  oled_ssd1306.h  pid_controller.h  system_status.h
STM32F405RGTx/Core/Inc/rc/: rc_ibus.h
STM32F405RGTx/Core/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  ros_interface.c  stm32f4xx_it.c  tim.c  usart.c
STM32F405RGTx/Core/Src/app/: app_main.c  app_rtos.c  app_transport.c  config_storage.c  debug_log.c  lyra_cmd.c  lyra_proto.c  oled_display.c
STM32F405RGTx/Core/Src/drivers/: adc_utils.c  encoder_driver.c  fonts.c  imu_lsm6dsrtr.c  motor_driver.c  oled_ssd1306.c  pid_controller.c  system_status.c
STM32F405RGTx/Core/Src/rc/: rc_ibus.c
STM32F405RGTx/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
presentation/: V2X_Platform_Presentation.pptx  build_pptx.py  index.html
robot_python/: camera.py  color_sample.py  config.yaml  control_socket.py  diag_drive.py  diag_wheel.py  emergency_handler.py  joystick.py  joystick_test.py  lane_follower.py  main_ambulance.py  main_car.py  motor_test.py  position.py  position_broadcaster.py  requirements.txt  robot_driver.py  setup.sh  stream_server.py  test_driver.py  v2x_ambulance.service  v2x_bridge.py  v2x_car.service  v2x_obu_trigger.py  v2x_robot_log.sh  v2x_run_ambulance.sh  v2x_run_car.sh
robot_python/algorithms/: __init__.py  base.py  centroid.py  pure_pursuit.py  recorded_path.py
robot_python/lib/: __init__.py  protocol.py  telemetry.py  transport.py
v2x_testbed/: LICENSE  README.md  v2x_run_desktop.sh  v2x_run_rsu.sh  v2x_status.sh
v2x_testbed/desktop/: config.py  requirements.txt  server.py
v2x_testbed/desktop/dashboard/: __init__.py  app.py
v2x_testbed/desktop/dashboard/templates/: index.html
v2x_testbed/desktop/database/: __init__.py  db.py  schema.sql
v2x_testbed/desktop/log_service/: __init__.py  log_receiver.py
v2x_testbed/desktop/registration/: __init__.py  key_generator.py  reg_server.py
v2x_testbed/desktop/tests/: test_registration.py
v2x_testbed/docs/: COMMANDS_REFERENCE.md  CRYPTO_PROVIDER_INTEGRATION_GUIDE.md  CUSTOMER_QUICKSTART.md  PERFORMANCE_TESTING.md
v2x_testbed/obu/: CMakeLists.txt
v2x_testbed/obu/config/: obu1_config.json  obu2_config.json
v2x_testbed/obu/src/: auth_client.cpp  auth_client.h  main.cpp  registration_client.cpp  udp_client.cpp  udp_client.h
v2x_testbed/protocol/: CMakeLists.txt
v2x_testbed/protocol/common/: config_reader.cpp  config_reader.h  key_store.cpp  key_store.h  timer.cpp  timer.h
v2x_testbed/protocol/crypto/: crypto_provider.h  lattice_provider.h  placeholder_provider.cpp  placeholder_provider.h
v2x_testbed/protocol/packets/: packet_serializer.cpp  packet_serializer.h
v2x_testbed/protocol/tests/: test_crypto.cpp  test_packets.cpp  test_protocol_flow.cpp
v2x_testbed/protocol/utils/: hex_utils.cpp  hex_utils.h
v2x_testbed/rsu/: CMakeLists.txt
v2x_testbed/rsu/config/: rsu_config.json
v2x_testbed/rsu/src/: log_sender.cpp  log_sender.h  main.cpp  packet_processor.cpp  packet_processor.h  receive_buffer.cpp  receive_buffer.h  registration_client.cpp  registration_client.h  session_manager.cpp  session_manager.h  udp_server.cpp  udp_server.h
v2x_testbed/scripts/: run_full_system_test.sh  run_performance_test.sh  run_system_live.sh
