<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>v2x_robot</name>
  <version>1.0.0</version>
  <description>
    V2X-enabled lane-following robot nodes.
    Provides line follower, emergency handler, and V2X bridge for
    Car and Ambulance robots in the V2X testbed demo.
  </description>
  <maintainer email="pravi.khm@gmail.com">Praveen Kumar</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>

  <!-- Runtime deps from existing packages -->
  <depend>lyra_bridge</depend>
  <depend>lyra_localization</depend>
  <depend>lyra_cmd_vel_gate</depend>
  <depend>camera_ros</depend>

  <!-- Optional joystick support -->
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
